2007-10-28 Harri Pitkänen <hatapitk@iki.fi>

	* Additional work on string tokenizer.

2007-10-27 Harri Pitkänen <hatapitk@iki.fi>

	* Additional work on string tokenizer.

2007-10-21 Harri Pitkänen <hatapitk@iki.fi>

	* Allow the use of environment variable VOIKKO_DICTIONARY_PATH
	  to specify the dictionary path.

2007-10-15 Harri Pitkänen <hatapitk@iki.fi>

	* Add preliminary version of string tokenizer
	  voikko_next_token_ucs4.
	* Increase version numbers for 1.6.

2007-09-08 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement suggestion "." -> ","

2007-08-23 Harri Pitkänen <hatapitk@iki.fi>

	* Change configure.ac to fix build on FreeBSD

2007-08-20 Harri Pitkänen <hatapitk@iki.fi>

	* FreeBSD fix, thanks to Jaakko Heinonen

2007-07-08 Harri Pitkänen <hatapitk@iki.fi>

	* Add option ignore_numbers=n to voikkospell. Change
	  default from 1 to 0 (the library default).
	* Undo 1-to-1 normalisations in spelling suggestions.

2007-06-19 Harri Pitkänen <hatapitk@iki.fi>

	* Add exported functions for freeing the memory
	  allocated for result structures. This is needed
	  in environments where multiple C runtime libraries
	  are used in one process.
	* Increase version numbers for 1.5

2007-06-17 Harri Pitkänen <hatapitk@iki.fi>

	* Generate libvoikko-1.def on Windows to enable
	  dynamic linking of libvoikko-1.dll with code
	  generated using MSVC.
	* Set Finnish locale on Windows to ensure that
	  character case conversions work correctly.

2007-05-07 Harri Pitkänen <hatapitk@iki.fi>

	* Hyphenating "vast'edes" as "vast'e-des" is ugly
	* Hyphenating after ' is wrong
	* Increase version numbers for 1.4.1

2007-04-19 Harri Pitkänen <hatapitk@iki.fi>

	* Check for embedded dots in URL detection
	* Only use URL and number detection when
	  VOIKKO_OPT_NO_UGLY_HYPHENATION is set

2007-04-07 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement _ -> (any character) to OCR suggestions 

2007-03-28 Harri Pitkänen <hatapitk@iki.fi>

	* Update to Automake 1.10