@@ -5,3 +5,7 @@ Missä, missä ovat avaimeni!
 Talossa asui 52-vuotias nainen 22,3 päivää vanhan leppäkertun kanssa←
 kissa, koira,kissa!koira ? kiss3a-
 Vaa'an 'välit' "varras".
+Filosiﬁn deﬂaatio  me®essä
+Kuorma-auto Keski- -etelä- kuorma‑auto
+‑kuorma‑auto‑ (vanha).
+[sanoja] {suluissa}
