@@ -76,3 +76,30 @@ P: """
 W: "varras"
 P: """
 P: "."
+W: "Filosiﬁn"
+S: " "
+W: "deﬂaatio"
+S: "  "
+W: "me"
+U: "®"
+W: "essä"
+W: "Kuorma-auto"
+S: " "
+W: "Keski-"
+S: " "
+W: "-etelä-"
+S: " "
+W: "kuorma‑auto"
+W: "‑kuorma‑auto‑"
+S: " "
+P: "("
+W: "vanha"
+P: ")"
+P: "."
+P: "["
+W: "sanoja"
+P: "]"
+S: " "
+P: "{"
+W: "suluissa"
+P: "}"
