@@ -1,3 +1,7 @@
+2007-10-30 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Additional work on string tokenizer.
+
 2007-10-28 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Additional work on string tokenizer.
